Add development environment password constraints.

--- a/ResidentialCommunityAssistant/appsettings.Development.json
+++ b/ResidentialCommunityAssistant/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "PasswordManagement": {
+    "RequireConfirmedAccount": false,
+    "RequireDigit": false,
+    "RequiredLength": 1,
+    "RequireNonAlphanumeric": false,
+    "RequireUppercase":  false
   }
 }
