--- a/ResidentialCommunityAssistant/appsettings.json
+++ b/ResidentialCommunityAssistant/appsettings.json
@@ -1,9 +1,17 @@
-{  
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "PasswordManagement": {
+    "RequireConfirmedAccount": false,
+    "RequireDigit": false,
+    "RequiredLength": 1,
+    "RequireNonAlphanumeric": false,
+    "RequireUppercase": false
+  }
 }
