--- a/ResidentialCommunityAssistant/appsettings.json
+++ b/ResidentialCommunityAssistant/appsettings.json
@@ -6,12 +6,13 @@
     }
   },
   "AllowedHosts": "*",
-
   "PasswordManagement": {
-    "RequireConfirmedAccount": false,
-    "RequireDigit": false,
-    "RequiredLength": 1,
-    "RequireNonAlphanumeric": false,
-    "RequireUppercase": false
+    "RequireConfirmedAccount": true,
+    "RequireDigit": true,
+    "RequireNonAlphanumeric": true,
+    "RequireUppercase": true
+  },
+  "ConnectionStrings": {
+    "CommunityAssistantDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ResidentialCommunityAssistant;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
