--- a/ResidentialCommunityAssistant/ResidentialCommunityAssistant.csproj
+++ b/ResidentialCommunityAssistant/ResidentialCommunityAssistant.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\ResidentialCommunityAssistant.Services\ResidentialCommunityAssistant.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\HomeManager\" />
+  </ItemGroup>
+
 </Project>
